<resources>
    <string name="app_name">MapMe</string>

    <string name="location_name">Location Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add">Add</string>
    <string name="lat">Lat :</string>
    <string name="longi">Long :</string>
    <string name="edit_location">Edit Location</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="distance">Distance</string>

    <string name="stopped">Stopped</string>
    <string name="started">Started</string>
    <string name="your_position">Heading to</string>

    <string name="choose_file">Choose a File</string>
    <string-array name="choose_file_options">
        <item>Choose Picture</item>
        <item>Choose Video</item>

    </string-array>
</resources>
